p2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inception-of-things
  labels:
    name: inception-of-things
